Fix: change font size for screen size 500px and down as the text in about us section overlaps footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -318,6 +318,11 @@ th {
 /* Media queries for screen size 500px wide and down */
 @media screen and (max-width: 500px) {
 
+    #about-center {
+        font-size: 1.2rem;
+        padding-top: 60px;
+    }
+
     /* hero image */
     #hero-image {
         background-image: url('../images/gold-fish-snipped.jpg');
